--- a/login.html
+++ b/login.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>KG Reddy College - Login & Signup</title>
+  <title>Advanced Encryption Tool - Login & Signup</title>
   <style>
     * {
       margin: 0;
@@ -146,4 +146,5 @@
     }
   </script>
 </body>
+
 </html>
